--- a/package.json
+++ b/package.json
@@ -1,7 +1,6 @@
 {
   "name": "qa-renderer",
   "version": "0.0.1",
-  "groupId": "nl.rabobank.dist.online",
   "description": "Runtime used for displaying Q&A style dialogs",
   "esnext": "dist/qa-renderer.js",
   "module": "dist/qa-renderer.js",
@@ -11,26 +10,13 @@
     "test": "jest --config=jest.config.js --coverage --ci",
     "build": "NODE_ENV=production ./node_modules/.bin/webpack",
     "start": "NODE_ENV=development ./node_modules/.bin/webpack-dev-server --hot --config webpack.config.js",
-    "start:coverage": "MODE=test NODE_ENV=development SERVER_PATH='coverage' SERVER_PORT=8085 ENTRY_PATH='src/**/*.js' OUTPUT_PATH=test ENTRY_KEY='test' ./node_modules/.bin/webpack-dev-server --hot --config webpack.config.js",
-    "publish": "npm test && npm run build && tnl-publish --type project"
+    "start:coverage": "MODE=test NODE_ENV=development SERVER_PATH='coverage' SERVER_PORT=8085 ENTRY_PATH='src/**/*.js' OUTPUT_PATH=test ENTRY_KEY='test' ./node_modules/.bin/webpack-dev-server --hot --config webpack.config.js"
   },
-  "keywords": [
-    "Q/A",
-    "runtime",
-    "Tridion"
-  ],
   "author": "Mark Bleichert",
   "license": "ISC",
-  "dependencies": {
-    "@tnl/tnl-utils": "latest",
-    "iterator": "0.0.0",
-    "save-dev": "^2.0.0",
-    "symbol": "^0.3.1"
-  },
   "devDependencies": {
     "@babel/core": "^7.2.2",
     "@babel/preset-env": "^7.2.3",
-    "@tnl/tnl-publish": "latest",
     "babel-cli": "^6.26.0",
     "babel-core": "^7.0.0-bridge.0",
     "babel-eslint": "^10.0.1",
